# moos-ivp-gateway

./: .gitignore  CMakeLists.txt  README.md  clean.sh  package.xml
cmake_modules/: FindProtobufLocal.cmake
include/lib_gateway_protobuf/: gateway.pb.cc  gateway.pb.h
include/lib_gateway_tcp/: tcp_server.h
include/util/: protobuf_support_for_moos.h
lib/: libgateway_tcp.so.
missions/moos-gateway-alpha/: alpha.bhv  alpha.moos  gateway_alpha.moos  launch.sh
scripts/: README
src/: CMakeLists.txt  README.md
src/iMOOSClient/: CMakeLists.txt  MOOSClient.cpp  MOOSClient.h  MOOSClient_Info.cpp  MOOSClient_Info.h  iMOOSClient.moos  main.cpp
src/iMOOSGateway/: CMakeLists.txt  MOOSGateway.cpp  MOOSGateway.h  MOOSGateway_Info.cpp  MOOSGateway_Info.h  iMOOSGateway.moos  main.cpp  test_gateway.moos
src/lib/: CMakeLists.txt
src/lib/lib_gateway_protobuf/: CMakeLists.txt  gateway.proto
src/lib/lib_gateway_tcp/: CMakeLists.txt  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_session.cpp  tcp_session.h
